<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:alpha=".1"
            android:visibility="gone">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />
        </FrameLayout>
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/email_fragment"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/rooms_to_go"
            android:contentDescription="@string/rooms_to_go_logo">

        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/input_container"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/icon"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/message_center"
                android:textSize="24sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/email_prompt"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/generic_error"
                android:textColor="@color/error_red"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/input_box"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/email_placeholder"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />
        </LinearLayout>

        <Button
            android:id="@+id/go_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/rounded_corners"
            android:text="@string/search_text"
            android:textAllCaps="false"
            android:textSize="16sp"
             />
        </LinearLayout>
    </FrameLayout>
</ScrollView>